--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "eslint": "^4.13.0",
+    "eslint-plugin-react": "^7.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
