--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint-plugin-react": "^7.5.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_ENV=production PUBLIC_URL=https://breakfast-spots.herokuapp.com react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
