--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "start": "REACT_APP_NODE_ENV=production REACT_APP_PUBLIC_URL=https://breakfast-spots.herokuapp.com REACT_APP_ENV=production react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-prebuild": "echo Installing dependencies.",
+    "heroku-postbuild": "npm run build"
   },
   "devDependencies": {
     "eslint": "^4.13.0",
